# esalao_app

./: .env.example  .gitignore  ARQUITETURA_SISTEMA_COMPLETA.md  Dockerfile  PENDING.MD  PHASE_0_ISSUE_CLOSURE.md  PHASE_1_ANALISE_STATUS.md  PHASE_1_PROGRESS.md  README.md  REVIEW_EXECUTIVE_SUMMARY.md  SPRINT_DIA1_COMPLETE.md  TASK_0104_REPOSITORIES_COMPLETE.md  TASK_0106_SLOT_SERVICE_COMPLETE.md  TASK_0108_BOOKING_ENDPOINTS_COMPLETE.md  TASK_0112_INTEGRATION_TESTS_COMPLETE.md  TASK_0113_PROFESSIONAL_ENDPOINTS_COMPLETE.md  TECHNICAL_REVIEW_REPORT.md  alembic.ini  docker-compose.yml  fix_all_payments.py  fix_metrics_deps.py  fix_missing_payment_method.py  fix_payment_method.py  fix_payment_status.py  fix_status.py  performance_test_report_20251021_111308.json  phase3_deployment_readiness_20251021_112115.json  phase3_validation_report_20251021_111645.json  phase3_validation_report_20251021_111817.json  prd.md  pyproject.toml
alembic/: env.py  env_orig.py  env_sync.py  script.py.mako
docs/: ATUALIZACAO_GITHUB_21_OUT_2025.md  CRITICAL_FIX_PUBLIC_ENDPOINTS.md  DEPLOYMENT_GUIDE_PHASE3.md  FASE_3_RESUMO_EXECUTIVO.md  NOTIFICATION_SYSTEM_SUMMARY.md  PERFORMANCE_BASELINE.md  PERFORMANCE_BOTTLENECK_ANALYSIS.md  PHASE_0_GITHUB_ISSUES.md  PHASE_0_SUMMARY.md  PHASE_1_MODELS_COMPLETE.md  PHASE_1_PROGRESS.md  PHASE_1_PROGRESS_UPDATED.md  PHASE_1_STATUS_SNAPSHOT.md  PHASE_2_COMPLETION_REPORT.md  PHASE_2_PROGRESS.md  SEED_DATA_COMPLETE.md  SPRINT_CONSOLIDACAO.md  SPRINT_CONSOLIDACAO_FINAL.md  SPRINT_PROGRESSO_ATUAL.md  SPRINT_PROGRESSO_COMPLETO.md  TASK_0107_ENDPOINT_COMPLETE.md  TASK_0107_TESTS_COMPLETE.md  TASK_0110_OPENAPI_COMPLETE.md  TASK_0111_UNIT_TESTS_COMPLETE.md  TASK_0114_SERVICE_ENDPOINTS_COMPLETE.md  TASK_0210_UNIT_TESTS_COMPLETE.md  TASK_0314_PERFORMANCE_OPTIMIZATION_COMPLETE.md  TASK_0315_INTEGRATION_TESTING_COMPLETE.md  TASK_0316_OPENAPI_DOCUMENTATION_COMPLETE.md  comandos.md
issues/: GH-001-cadastro-cliente.md  GH-002-login-autenticacao.md  GH-003-recuperacao-senha.md  GH-004-cadastro-unidade.md  GH-005-cadastro-profissional.md  GH-006-config-catalogo-servicos.md  GH-007-ajuste-disponibilidade-profissional.md  GH-008-buscar-slots.md  GH-009-reservar-servico.md  GH-010-politica-cancelamento.md  GH-011-marcar-no-show.md  GH-012-fila-espera.md  GH-013-overbooking-controlado.md  GH-014-pagamento-pix-cartao.md  GH-015-reembolso.md  GH-016-notificacoes-lembrete.md  GH-017-avaliar-servico.md  GH-018-moderacao-avaliacoes.md  GH-019-relatorios-operacionais.md  GH-020-relatorios-plataforma.md  GH-021-comissao-profissional.md  (+30 more)
(+247 files in other folders)
